--- a/gradient descent 1.ipynb
+++ b/gradient descent 1.ipynb
@@ -1,20 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "id": "5f567ed8",
-   "metadata": {},
-   "source": [
-    "Источник: https://github.com/ritvikmath/YouTubeVideoCode/blob/main/Gradient%20Descent.ipynb"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 117,
    "id": "1d26bc2a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#источник: https://github.com/ritvikmath/YouTubeVideoCode/blob/main/Gradient%20Descent.ipynb\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd"
