--- a/monte carlo 1.ipynb
+++ b/monte carlo 1.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf81982d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# по урокам https://www.youtube.com/watch?v=EaR3C4e600k&ab_channel=ritvikmath"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c26e2514",
    "metadata": {},
@@ -122,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48fd9936",
+   "id": "ccb45805",
    "metadata": {},
    "source": [
     "## Harder Example "
@@ -130,7 +140,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "79f1fa84",
+   "id": "d6b53c50",
    "metadata": {},
    "source": [
     "Игра состоит из нескольких раундов. Вероятность выиграть в одном раунде равна P. Игра заканчивается при проигрыше в двух раундах подряд. Необходимо найти среднее количество раундов в этой игре, прежде чем она закончится."
@@ -138,7 +148,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "6ffcb230",
+   "id": "073bf1ec",
    "metadata": {},
    "source": [
     "Математический способ:\n",
@@ -149,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "5bb95a9a",
+   "id": "7d87f761",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "b8fe5d2c",
+   "id": "db10fe23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "7c77a4a0",
+   "id": "f9823a28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "d3d87ef0",
+   "id": "2ac641d6",
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9aa46164",
+   "id": "b93f3afa",
    "metadata": {},
    "source": [
     "## Running Problem "
@@ -279,7 +289,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "a2bb2713",
+   "id": "c1786fae",
    "metadata": {},
    "source": [
     "Температура утром равномерно распределена от 40 до 60 градусов F. Человеку комфортно выходить на пробежку при средней температуре 55 градусов F со стандартным отклонением 5 F. Если температура воздуха больше комфортной, то человек выходит на пробежку и тратит калории по экспоненциальному закону распределения со средним значением 200 калорий. Какое среднее значение калорий сжигает человек?"
@@ -288,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "0fde142b",
+   "id": "926cc875",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "c2703d34",
+   "id": "f9cfd9e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "07a3d6e2",
+   "id": "e3987ec2",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "9cd2c768",
+   "id": "c52c4336",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "c707f1b7",
+   "id": "4c5ab50a",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "14934d4f",
+   "id": "62c5baed",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "b44ec7f9",
+   "id": "28be1770",
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0486d89c",
+   "id": "507cd48e",
    "metadata": {},
    "source": [
     "## Efficient Method: Vectorization "
@@ -482,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "441d81aa",
+   "id": "8f991ab4",
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "3407d1a1",
+   "id": "94d05256",
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "cc99bee5",
+   "id": "1ecb5353",
    "metadata": {},
    "outputs": [
     {
